# TradeSim-Pr0

./: .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml
.devcontainer/: devcontainer.json
cpp/: CMakeLists.txt  README.md
cpp/include/engine/: README.md  interfaces.hpp
cpp/src/: CMakeLists.txt
cpp/src/engine/: interfaces.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/engine/: interfaces_test.cpp
gui/: README.md  package.json
py/: README.md  requirements.txt  setup.py
tests/: README.md
